fulfill the conditions of adding courses with credit hours with toastify

--- a/src/components/Course/Course.css
+++ b/src/components/Course/Course.css
@@ -1,3 +1,12 @@
-.container{
-    background-color: aqua;
+li{
+    list-style: none;
+}
+.add-course{
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.remaining-credit{
+    color: #2F80ED;
 }
